--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -13,14 +13,49 @@
 	<body {{template "body-attrs" .}}>
 		<div id="overlay"></div>
 		<header>
-			<h2><a href="/">{{.SiteName}}</a></h2>
+			{{ if .Chorus }}<nav id="full-nav">
+				<div class="left-side">
+					<h2><a href="/">{{.SiteName}}</a></h2>
+				</div>
+			{{ else }}
+				<h2><a href="/">{{.SiteName}}</a></h2>
+			{{ end }}
 			{{if not .SingleUser}}
 			<nav id="user-nav">
-				<nav class="tabs">
-					<a href="/about"{{if eq .Path "/about"}} class="selected"{{end}}>About</a>
-					{{if and (and (not .SingleUser) .LocalTimeline) .CanViewReader}}<a href="/read"{{if eq .Path "/read"}} class="selected"{{end}}>Reader</a>{{end}}
-					{{if and (not .SingleUser) (not .Username)}}<a href="/login"{{if eq .Path "/login"}} class="selected"{{end}}>Log in</a>{{end}}
+				{{if .Username}}
+				<nav class="dropdown-nav">
+					<ul><li><a>{{.Username}}</a> <img class="ic-18dp" src="/img/ic_down_arrow_dark@2x.png" /><ul>
+							{{if .IsAdmin}}<li><a href="/admin">Admin dashboard</a></li>{{end}}
+							<li><a href="/me/settings">Account settings</a></li>
+							<li><a href="/me/export">Export</a></li>
+							{{if .CanInvite}}<li><a href="/me/invites">Invite people</a></li>{{end}}
+							<li class="separator"><hr /></li>
+							<li><a href="/me/logout">Log out</a></li>
+						</ul></li>
+					</ul>
 				</nav>
+				{{end}}
+				<nav class="tabs">
+					{{ if and .SimpleNav (not .SingleUser) }}
+					{{if and (and .LocalTimeline .CanViewReader) .Chorus}}<a href="/"{{if eq .Path "/"}} class="selected"{{end}} data-i18n="common.home">Home</a>{{end}}
+					{{ end }}
+					{{if or .Chorus (not .Username)}}<a href="/about"{{if eq .Path "/about"}} class="selected"{{end}} data-i18n="common.about">About</a>{{end}}
+					{{ if not .SingleUser }}
+						{{ if .Username }}
+					{{if or (not .Chorus) (gt .MaxBlogs 1)}}<a href="/me/c/"{{if eq .Path "/me/c/"}} class="selected"{{end}} data-i18n="common.blogs">Blogs</a>{{end}}
+					{{if and (and .Chorus (eq .MaxBlogs 1)) .Username}}<a href="/{{.Username}}/"{{if eq .Path (printf "/%s/" .Username)}} class="selected"{{end}} data-i18n="common.my_posts">My Posts</a>{{end}}
+					{{if not .DisableDrafts}}<a href="/me/posts/"{{if eq .Path "/me/posts/"}} class="selected"{{end}} data-i18n="common.drafts">Drafts</a>{{end}}
+						{{ end }}
+					{{if and (and  .LocalTimeline .CanViewReader) (not .Chorus)}}<a href="/read"{{if eq .Path "/read"}} class="selected"{{end}} data-i18n="common.reader">Reader</a>{{end}}
+					{{if and (and (and  .Chorus .OpenRegistration) (not .Username)) (or (not .Private) (ne .Landing ""))}}<a href="/signup"{{if eq .Path "/signup"}} class="selected"{{end}} data-i18n="common.sign_up">Sign up</a>{{end}}
+					{{if not .Username}}<a href="/login"{{if eq .Path "/login"}} class="selected"{{end}} data-i18n="common.login">Log in</a>{{else if .SimpleNav}}<a href="/me/logout" data-i18n="common.logout">Log out</a>{{end}}
+					{{ end }}
+				</nav>
+				{{if .Chorus}}{{if .Username}}<div class="right-side" style="font-size: 0.86em;">
+							<a class="simple-btn" href="/new" data-i18n="common.new_post">New Post</a>
+						</div>{{end}}
+					</nav>
+				{{end}}
 			</nav>
 			{{end}}
 		</header>
@@ -49,6 +84,11 @@
 		} catch (e) { /* ¯\_(ツ)_/¯ */ }
 		{{end}}
 		</script>
+		<script src="https://unpkg.com/i18next@18.0.1/dist/umd/i18next.min.js"></script>
+		<script src="https://unpkg.com/i18next-fetch-backend@2.2.0/dist/i18next-fetch-backend.umd.js"></script>
+		<script src="https://unpkg.com/i18next-browser-languagedetector@4.0.0/dist/umd/i18nextBrowserLanguageDetector.js"></script>
+		<script src="https://unpkg.com/loc-i18next@0.1.4/dist/umd/loc-i18next.min.js"></script>
+		<script src="{{.Host}}/js/i18n.js"></script>
 		{{else}}
 			{{if .WebFonts}}<link href="{{.Host}}/css/fonts.css" rel="stylesheet" type="text/css" />{{end}}
 		{{end}}
